// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_google_dataflow datatype_in_config 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_config.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 40,
          "end": 58
        }
      },
      "sink": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 3,
          "end": 60
        },
        "content": "config.metadata = { current_user_id: current_user.email }"
      },
      "parent_line_number": 8,
      "snippet": "config.metadata = { current_user_id: current_user.email }",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "14ec80be3c20aa40ecb54384676d0e82_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 14,
      "full_filename": "/tmp/bearer-scan/datatype_in_config.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 14,
        "end": 14,
        "column": {
          "start": 45,
          "end": 63
        }
      },
      "sink": {
        "start": 14,
        "end": 14,
        "column": {
          "start": 1,
          "end": 65
        },
        "content": "client_config.metadata = { current_user_id: current_user.email }"
      },
      "parent_line_number": 14,
      "snippet": "client_config.metadata = { current_user_id: current_user.email }",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_1",
      "old_fingerprint": "14ec80be3c20aa40ecb54384676d0e82_1"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_job_message 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_job_message.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 37,
          "end": 52
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 54
        },
        "content": "msg.message_text = \\"Current user: #{user.ip_address}\\""
      },
      "parent_line_number": 2,
      "snippet": "msg.message_text = \\"Current user: #{user.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "b69ba9920cecb1ec93acb85941af5a0a_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_metadata 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_metadata.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 32,
          "end": 51
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 53
        },
        "content": "custom_metadata.value = \\"ip: #{customer.ip_address}\\""
      },
      "parent_line_number": 2,
      "snippet": "custom_metadata.value = \\"ip: #{customer.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "8ab25500a910a9ed7912fa6b0f1e141e_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 5,
      "full_filename": "/tmp/bearer-scan/datatype_in_metadata.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 39,
          "end": 58
        }
      },
      "sink": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 1,
          "end": 60
        },
        "content": "template_metadata.description =\\"ip: #{customer.ip_address}\\""
      },
      "parent_line_number": 5,
      "snippet": "template_metadata.description =\\"ip: #{customer.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_1",
      "old_fingerprint": "8ab25500a910a9ed7912fa6b0f1e141e_1"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 6,
      "full_filename": "/tmp/bearer-scan/datatype_in_metadata.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 6,
        "end": 6,
        "column": {
          "start": 32,
          "end": 51
        }
      },
      "sink": {
        "start": 6,
        "end": 6,
        "column": {
          "start": 1,
          "end": 53
        },
        "content": "template_metadata.name =\\"ip: #{customer.ip_address}\\""
      },
      "parent_line_number": 6,
      "snippet": "template_metadata.name =\\"ip: #{customer.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_2",
      "old_fingerprint": "8ab25500a910a9ed7912fa6b0f1e141e_2"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_params_entry 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_params_entry.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 22,
          "end": 41
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 43
        },
        "content": "param.value = \\"ip: #{customer.ip_address}\\""
      },
      "parent_line_number": 2,
      "snippet": "param.value = \\"ip: #{customer.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "38ecf06004d8de9f876411175045116d_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_snapshot_job_request 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_snapshot_job_request.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 36,
          "end": 51
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 53
        },
        "content": "req.description = \\"Current user: #{user.ip_address}\\""
      },
      "parent_line_number": 2,
      "snippet": "req.description = \\"Current user: #{user.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "fd348a183be480cd9e93dfc9b272b388_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_snapshot_setter 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 9,
      "full_filename": "/tmp/bearer-scan/datatype_in_snapshot_setter.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 9,
        "end": 9,
        "column": {
          "start": 41,
          "end": 59
        }
      },
      "sink": {
        "start": 9,
        "end": 9,
        "column": {
          "start": 1,
          "end": 61
        },
        "content": "snapshot.description = \\"Current user: #{user.email_address}\\""
      },
      "parent_line_number": 9,
      "snippet": "snapshot.description = \\"Current user: #{user.email_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "0367c62f5b5a4f5f15e25f7ef85e500f_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_structured_message 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 4,
      "full_filename": "/tmp/bearer-scan/datatype_in_structured_message.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 4,
        "end": 4,
        "column": {
          "start": 41,
          "end": 56
        }
      },
      "sink": {
        "start": 4,
        "end": 4,
        "column": {
          "start": 1,
          "end": 58
        },
        "content": "str_msg.message_text = \\"Current user: #{user.ip_address}\\""
      },
      "parent_line_number": 4,
      "snippet": "str_msg.message_text = \\"Current user: #{user.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "d5d30e5cbe893bfcd32ae3481cbc6a6f_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_structured_message_param 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_structured_message_param.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 23,
          "end": 42
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 44
        },
        "content": "param2.value = \\"ip: #{customer.ip_address}\\""
      },
      "parent_line_number": 2,
      "snippet": "param2.value = \\"ip: #{customer.ip_address}\\"",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "6592df61f091ba8cac7869153d08d639_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow datatype_in_template_job_creation 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 5,
      "full_filename": "/tmp/bearer-scan/datatype_in_template_job_creation.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 110,
          "end": 120
        }
      },
      "sink": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 1,
          "end": 123
        },
        "content": "templates_client.create_job_from_template(project_id: \\"123\\", job_name: \\"my-job\\", parameters: { current_user: user.email })"
      },
      "parent_line_number": 5,
      "snippet": "templates_client.create_job_from_template(project_id: \\"123\\", job_name: \\"my-job\\", parameters: { current_user: user.email })",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "a82d76165de3ede0c9a49837be37cc43_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow fail_with_different_version 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_google_dataflow",
      "title": "Sensitive data sent to Google Dataflow detected.",
      "description": "## Description\\nLeaking sensitive data to a third-party service is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Google Dataflow.\\n\\n## Remediations\\n\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Google Dataflow Docs](https://cloud.google.com/ruby/docs/reference/google-cloud-dataflow/latest)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_google_dataflow",
      "line_number": 5,
      "full_filename": "/tmp/bearer-scan/fail_with_different_version.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 110,
          "end": 120
        }
      },
      "sink": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 1,
          "end": 123
        },
        "content": "templates_client.create_job_from_template(project_id: \\"123\\", job_name: \\"my-job\\", parameters: { current_user: user.email })"
      },
      "parent_line_number": 5,
      "snippet": "templates_client.create_job_from_template(project_id: \\"123\\", job_name: \\"my-job\\", parameters: { current_user: user.email })",
      "fingerprint": "413255d6456534b1be7ccdeddaeeb019_0",
      "old_fingerprint": "0ba2dc3878f27769d6c4c9c38f886442_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_google_dataflow ok_ignored_datatypes_only 1`] = `"{}"`;

exports[`ruby_third_parties_google_dataflow ok_no_datatypes 1`] = `"{}"`;
